# mea-flow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  DEPLOYMENT_GUIDE.md  INSTALLATION_GUIDE.md  INSTALL_GUIDE.md  LICENSE  MEA_FEATURE_ANALYSIS_PIPELINE.md  Makefile  README.md  convert_mat_to_csv.py  notebook_spk_example.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_advanced_dependencies.py  test_csv_loading.py  test_direct_import.py  test_loader.py  test_loader_v2.py  test_spk_integration.py  verify_install.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: analysis.rst  data.rst
docs/examples/: index.rst
docs/tutorials/: burst_detection.rst  getting_started.rst  index.rst  spike_analysis.rst  troubleshooting.rst
examples/: basic_analysis.py  cross_condition_comparison.py  manifold_learning_workflow.py  spk_loader_demo.py  test_spk_loader.py  well_plate_analysis.py
examples/output/: demo.spk
examples/output/well_plate_analysis/: detailed_well_analysis.csv  plate_analysis_report.txt  well_summary.csv
notebooks/: 01_data_loading.ipynb  01_mea_flow_tutorial.ipynb  02_native_spk_loading.ipynb  03_activity_analysis.ipynb  03_manifold_analysis.ipynb  04_feature_based_analysis.ipynb  05_manifold_analysis.ipynb  ACTIVITY_ANALYSIS_METHODS_REFERENCE.md  CLUSTERING_METHODS_DOCUMENTATION.md  FEATURE_ANALYSIS_METHODS_REFERENCE.md  MANIFOLD_METHODS_DOCUMENTATION.md  README.md  data_loading_routine.py
notebooks/test_output/: 01_mea_flow_tutorial.ipynb  02_native_spk_loading.ipynb  04_feature_based_analysis.ipynb
notebooks/testing/: 03_activity_analysis.ipynb  04_feature_based_analysis.ipynb  05_manifold_analysis.ipynb  activity_analysis.ipynb  consensus_feature_rankings.csv  critical_features.csv  critical_features_data.csv  data_loading.ipynb  results_channels.csv  results_global.csv  results_temporal.csv  results_wells.csv  test_axion.py
src/mea_flow/: __init__.py  analysis.py  data.py  viz.py
src/mea_flow/analysis/: __init__.py  activity.py  burst_analysis.py  clustering.py  discriminant.py  feature_space.py  metrics.py  regularity.py  synchrony.py
src/mea_flow/data/: __init__.py  axion_spk_loader.py  loaders.py  preprocessing.py  spike_list.py
src/mea_flow/manifold/: __init__.py  analysis.py  comparison.py  embedding.py  evaluation.py
src/mea_flow/utils/: __init__.py  config.py  helpers.py  io.py
src/mea_flow/visualization/: __init__.py  discriminant.py  manifold.py  metrics.py  plotter.py  raster.py  wells.py
tests/: conftest.py  test_analysis.py  test_data.py  test_manifold.py  test_visualization.py
tmp/: activity_across_wells.ipynb  autocorrelations.py  auxiliary.py  embedding_space_analysis.ipynb  final_comparison_all.py  final_comparison_onecondition.py  final_comparisons_onewell.py  fitfuncts.py  global-manifolds.ipynb  global-spiking-stats.ipynb  import-all.ipynb  manifold-comparisons.ipynb  project_description.md  raw_spikes.ipynb  report.md  single_well_algorithm_choice.py  spiking-statistics-exp1.ipynb  state-geometry-exp1.ipynb  state-geometry-single-well.ipynb  state-geometry-small.ipynb  state-manifolds-info.md  state-manifolds-single.ipynb  timescales_postprocess.ipynb
tmp/AxionFileLoader/: CONTRIBUTING.md  README.md
