[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mea-flow"
version = "0.1.0"
description = "Latent state space analysis of Micro-Electrode Array data"
readme = "README.md"
authors = [
    {name = "Renato Duarte", email = "rcfduarte@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.4",
    "h5py>=3.9.0",
    "neo>=0.12.0",
    "neurolytics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "mypy>=1.5.1",
    "ruff>=0.1.5",
    "pre-commit>=3.5.0",
    "sphinx>=7.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mea_flow"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
