[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mea-flow"
version = "0.1.0"
description = "A Python package for analyzing multi-electrode array (MEA) data with focus on neural population dynamics"
authors = [
    {name = "MEA-Flow Team", email = "contact@mea-flow.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["neuroscience", "MEA", "multi-electrode-array", "manifold-learning", "population-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    # Machine learning and statistics
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    # Advanced ML algorithms
    "xgboost>=3.0.5",
    "lightgbm>=4.6.0",
    # Feature selection and imbalanced learning
    "imbalanced-learn>=0.14.0",
    "mlxtend>=0.23.4",
    "skrebate>=0.62",
    "boruta>=0.4.3",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Data I/O and processing
    "h5py>=3.8.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    # Performance optimization
    "numba>=0.57.0",
    # Manifold learning
    "umap-learn>=0.5.9",
]

[project.optional-dependencies]
# Optional dependencies for enhanced functionality
full = [
    "pyspike>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.15.0",
]
all = [
    "mea-flow[full,dev,notebooks]"
]

[project.urls]
Homepage = "https://github.com/CNNC-Lab/mea-flow"
Documentation = "https://github.com/CNNC-Lab/mea-flow/tree/main/notebooks"
Repository = "https://github.com/CNNC-Lab/mea-flow.git"
"Bug Tracker" = "https://github.com/CNNC-Lab/mea-flow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mea_flow"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/mea_flow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=2.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "twine>=4.0.0",
    "isort>=5.12.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.15.0",
]
