[metadata]
name = mea-flow
author = MEA-Flow Team
author_email = contact@mea-flow.org
description = Neural Population Dynamics Analysis for Multi-Electrode Arrays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CNNC-Lab/mea-flow
project_urls =
    Bug Tracker = https://github.com/CNNC-Lab/mea-flow/issues
    Documentation = https://mea-flow.readthedocs.io
    Source Code = https://github.com/CNNC-Lab/mea-flow
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
full =
    umap-learn>=0.5.3
    pyspike>=0.7.0
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.3.0
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
    nbsphinx>=0.9.0
    safety>=2.3.0
    bandit>=1.7.0
    twine>=4.0.0
notebooks =
    jupyter>=1.0.0
    jupyterlab>=4.0.0
    ipywidgets>=8.0.0
    plotly>=5.15.0

[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .coverage,
    htmlcov,
    docs/_build
per-file-ignores =
    __init__.py:F401
    tests/*:S101  # Allow assert statements in tests

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False  # Start lenient, can tighten later
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
check_untyped_defs = True
no_implicit_reexport = True

[mypy-tests.*]
disallow_untyped_defs = False

[bandit]
exclude_dirs = tests,docs,build,dist
skips = B101  # Skip assert_used test

[tool:isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = mea_flow
known_third_party = numpy,scipy,pandas,matplotlib,seaborn,sklearn,pytest